hphp/hack/test/typecheck/attributes/global_constant_attribute.php
<?hh // strict

<<MyAttribute(13, GLOBAL_CONST)>>
class X {}
